<resources>
    <string name="app_name">Lab3</string>
    <string name="input_text">Написать сообщение…</string>
    <string name="btn_text">Отправить</string>
    <string name="back_btn">Вернуться</string>
    <string name="liner_btn">Чат на LinerLayout</string>
    <string name="constraint_btn">Чат на ConstraintLayout</string>
    <string name="frame_btn">Image viewer на FrameLayout</string>


    <string name="anna_text1">Анна: Привет! Как дела?\n</string>
    <string name="anna_text2">Анна: Тоже неплохо) А что у тебя нового?\n</string>
    <string name="anna_text3">Анна: О, здорово! А у меня ничего особенного, просто сидела дома\n</string>
    <string name="anna_text4">Анна: Да, хочу сходить в кино, может, присоединишься?\n</string>
    <string name="anna_text5">Анна: Думала посмотреть новый боевик, ты за или против?\n</string>
    <string name="anna_text6">Анна: Люблю комедии и триллеры, а ты?\n</string>
    <string name="anna_text7">Анна: Вот это отличное качество!)) Надеюсь, фильм тебе тоже понравится\n</string>
    <string name="anna_text8">Анна: Да, отличная идея\n</string>
    <string name="anna_text9">Анна: Я обычно беру попкорн с разными вкусами, мне нравится все перепробовать) Ты какие закуски предпочитаешь?\n</string>
    <string name="anna_text10">Анна: Звучит классно! Мне тоже нравится попкорн с маслом, а после кино можем где-нибудь поужинать?\n</string>
    <string name="anna_text11">Анна: Отлично! Я знаю хорошее место с вкусной пастой, как тебе идея итальянской кухни?\n</string>
    <string name="anna_text12">Анна: Тогда точно не пожалеешь, у них там прекрасный выбор блюд, кстати, ты любишь сладкое?\n</string>
    <string name="anna_text13">Анна: Тогда обязательно закажем десерты.! Меня всегда радуют сладкие моменты в жизни)\n</string>

    <string name="mark_text1">Марк: Привет! Всё отлично, спасибо! Как сама?\n</string>
    <string name="mark_text2">Марк: Сегодня ходил на концерт, было круто! А у тебя?\n</string>
    <string name="mark_text3">Марк: Ну иногда дома тоже бывает уютно) Ты на выходных что-нибудь планируешь?\n</string>
    <string name="mark_text4">Марк: Конечно, отличная идея! С каким фильмом планируешь?\n</string>
    <string name="mark_text5">Марк: За, мне всегда интересно посмотреть новые фильмы! Какой жанр ты предпочитаешь?\n</string>
    <string name="mark_text6">Марк: Мне больше нравятся фантастика и драмы, но я всегда открыт для новых жанров)\n</string>
    <string name="mark_text7">Марк: Я уверен, что будет интересно, давай встретимся в кино в субботу?\n</string>
    <string name="mark_text8">Марк: А кстати, что ты любишь покупать в кино? Попкорн или сладости?\n</string>
    <string name="mark_text9">Марк: Я тоже люблю разнообразие, но чаще всего беру попкорн с маслом, пить обычно колу или фанту\n</string>
    <string name="mark_text10">Марк: Замечательная идея! Может, выберем что-нибудь вкусное и посидим в уютном кафе?\n</string>
    <string name="mark_text11">Марк: Итальянская кухня – это всегда хороший выбор! Я с радостью попробую итальянскую пасту\n</string>
    <string name="mark_text12">Марк: Да, я обожаю сладкое! Что-нибудь десертное после ужина – это всегда плюс\n</string>
    <string name="mark_text13">Марк: Согласен, сладости делают нашу жизнь вкуснее и ярче)) Я уверен, что у нас будет отличный вечер!\n</string>
</resources>